# hermes-android-device-controller

./: .env.example  .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml  skill.json
android-helper/: README.md  gradlew  gradlew.bat  settings.gradle.kts
android-helper/app/: build.gradle.kts
docs/: phase-1-adb-control.md  phase-2-mock-location-helper.md  phase-2.5-hermes-profile-integration.md  phase-3-enterprise-app-ui-probe.md  phase-3.5-enterprise-auth-login.md  phase-4-enterprise-approval-dry-run.md  phase-5-controlled-approval-execution.md  phase-5.5-wechat-approval-report.md  phase-6-daily-oa-approval-automation.md  roadmap.md  safety-boundaries.md
scripts/: build_daily_approval_plan.py  check_device.py  check_device.sh  daily_approval_scheduler.py  dump_screen.py  dump_screen.sh  enterprise_login.py  execute_daily_approval_plan.py  ghostmapx_location.py  hermes_preflight.py  link_to_sunny_wechat_lite.sh  probe_enterprise_app.py  probe_specific_approval_menu.py  submit_enterprise_sms_code.py  test_input.sh  test_mock_location.py  test_screenshot.sh  validate_approval_confirmation_flow.py  verify_hermes_profile_link.sh
src/hermes_android_controller/: __init__.py  adb_client.py  app_probe.py  approval_report.py  artifact_archive.py  daily_approval_scheduler.py  device_status.py  enterprise_approval_executor.py  (+8 more)
tests/: test_adb_client.py  test_approval_report.py  test_command_builder.py  test_daily_approval_scheduler.py  test_enterprise_approval_executor.py  test_enterprise_approval_probe.py  test_enterprise_auth.py  test_ghostmapx.py  test_ui_parser.py
(+7 files in other folders)
